# simple-api-key-rotator

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.md  index.md  usage.md
src/example_pkg/: __init__.py  core.py
src/simple_api_key_rotator/: __init__.py  rotator.py
tests/: test_core.py  test_rotator.py
