[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-api-key-rotator"
version = "0.1.0"
description = "Rotate API keys using a 24-hour cooldown rule."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["api", "keys", "rotation", "secrets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
